# kman

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: kubeconfig.rs  main.rs
