[package]
name = "kman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
dialoguer = "0.11.0"
directories = "5.0.1"
env_logger = "0.11.5"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_yml = "0.0.12"
