[package]
name = "kman"
version = "0.1.0"
edition = "2021"
authors = ["Stef Robbe <stef.robbe@protonmail.com"]
description = "A Kubeconfig MANager that allows you to easily refresh oauth tokens"
repository = "https://github.com/Stef16Robbe/kman"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["kubernetes", "kubeconfig", "openshift"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
colored = "2.1.0"
dialoguer = "0.11.0"
directories = "5.0.1"
env_logger = "0.11.5"
human-panic = "2.0.2"
regex = "1.11.1"
roxygen = "0.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yml = "0.0.12"
